# NetrAI

./: README.md
android_app/: settings.gradle.kts
android_app/app/: build.gradle.kts
android_app/gradle/: libs.versions.toml
android_app/gradle/wrapper/: gradle-wrapper.properties
backend/: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.prod.yml  health_forecast_xgb.pkl  pyproject.toml
backend/scripts/: download_models.py  generate_mock_data.py  seed_bangalore_data.py  test_api_mocked.py  test_live_api.py  test_pipeline.py  train_forecast.py  train_predict_model.py
backend/src/: config.py  main.py  ml.py  predict.py  storage.py
frontend/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  instrumentation.ts  maintenance.md  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml  todo.md  vitest.config.ts  vitest.setup.ts
frontend/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/app/(auth)/: layout.tsx
frontend/app/admin/: page.tsx
frontend/app/impact/: page.tsx
frontend/app/map/: page.tsx
frontend/app/priority/: page.tsx
frontend/components/: DetectionMap.tsx  ImpactMap.tsx  PageWrapper.tsx  ReportDetailModal.tsx  nav.tsx  theme-toggle.tsx
frontend/docs/: backend.md  frontend.md
frontend/lib/: admin.ts  colors.ts  db-indexes.ts  mongodb.ts  storage.ts
frontend/scripts/: seed.mjs
frontend/stitch/: 01-project-overview.html  02-storystream-history.html  03-waste-detection.html  04-road-damage.html
(+46 files in other folders)
