[project]
name = "dammage-backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "ai-edge-litert>=2.1.4",
    "clip",
    "cloudinary>=1.45.0",
    "fastapi>=0.136.1",
    "opencv-python-headless>=4.13.0.92",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "pymongo>=4.17.0",
    "python-multipart>=0.0.26",
    "scikit-learn>=1.9.0",
    "ultralytics>=8.4.41",
    "uvicorn[standard]>=0.46.0",
    "xgboost>=3.3.0",
]

[tool.uv.sources]
clip = { git = "https://github.com/ultralytics/CLIP.git" }
